# baremetal-rust-with-allocator

./: Cargo.toml  README.md  bin2hex.py  generate_outputs.sh  link.x  memory.ld
.cargo/: config.toml
src/: main.rs
